--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@supabase/supabase-js": "^1.35.3",
     "buffer": "^6.0.3",
     "dids": "^3.2.0",
+    "eip1193-provider": "^1.0.1",
     "key-did-provider-ed25519": "^2.0.0",
     "key-did-resolver": "^2.0.4",
     "lit-js-sdk": "^1.1.185"
+  },
+  "devDependencies": {
+    "typescript": "^4.7.4"
   }
 }
